# qts_project

./: .gitignore  MBT_BTC_Spread_Analysis.ipynb  readme.md  requirements.txt
.claude/skills/: rubric.md  uv-python.md
week2/: crypto_spread_analysis.html  crypto_spread_analysis.ipynb  pyproject.toml  readme.md
week2/outputs/results/: optimization_results.json  optimization_summary.csv  optimization_summary.txt
week2/scripts/: run_optimization.py
week2/src/crypto_spread/: __init__.py  backtest.py  config.py  data_loader.py  metrics.py  optimizer.py  signals.py  strategy.py  visualization.py
week3/: AGENT_QUICK_REFERENCE.md  FORMULA_VALIDATION_SUMMARY.md  compute_ratios_vectorized.py  financial_ratio_quantile_strategy.ipynb  ratio_calculator.py  test_validation.py  test_vectorized_ratios.py  validate_wm.py  validate_wm_formulas.py  wm_formula_analysis_v2.py
week3/outputs/analysis/: comprehensive_analysis.md  executive_summary.md  financial_ratio_quantile_research.md  key_findings.md  rubric_evaluation.md
week4/: trade_flow_analysis.ipynb  trade_flow_utils.py
week5/: Bank_of_England_Data_Fetch.ipynb  EmergingMkt_YC_Download_BBERG_Sheets.xlsx  fx_carry_strategy.ipynb  fx_carry_utils.py
