[project]
name = "crypto-spread-trading"
version = "0.1.0"
description = "Crypto spread trading optimization using Optuna"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "optuna>=3.4.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "numba>=0.58.0",
    "scipy>=1.11.0",
    "tqdm>=4.66.0",
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
    "notebook>=7.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_spread"]
